--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,8 +1,8 @@
 *{
     color: white;
-}
-body{
-    background: linear-gradient(to right, #ff5e62, #ff9966); 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 .container{
     margin: 0 auto;
@@ -13,39 +13,45 @@ body{
 header{
     background-color: #00a5f0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    padding: 0px 15px;
+    padding: 15px 15px;
+}
+header h1{
+    text-align: center;
 }
 nav {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-around;
     align-content: center;
-    gap: 5px;
+}
+nav p{
+    margin-right: 5px;
 }
 div{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     margin: 15px 0px;
-    gap: 10px;
 }
 aside{
     background-color: #00a5f0;
-    flex-grow: 2;
+    padding-top: 15px;
+    padding-left: 25px;
+    padding-bottom: 15px;
 }
 aside li{
     color: #005aed
 }
 aside h2{
     text-align: center;
+    padding-bottom: 15px;
 }
 main{
     display: flex; 
     flex-direction: row;
-    flex-grow: 3;
     align-items: flex-start;
+    margin-top: 15px
 }
 .servicio{
     display: flex;
@@ -69,24 +75,29 @@ footer{
     display: flex;
     background-color: #8c23aa;
     justify-content: space-around;
-    margin: 10px 0px;
-    padding: 10px 0px;
+    margin: 30px 0px;
+    padding: 20px 0px;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     body {
-      background:none;
+      background: linear-gradient(to right, #ff5e62, #ff9966); 
     }
     header{
-        flex-direction: column;
-    }
-    header h1{
-        text-align: center;
+        flex-direction: row;
     }
     nav{
         padding: 0;
-        justify-content: space-around;
+        justify-content: space-between;
     }
     div{
-        flex-direction: column;
+        flex-direction: row-reverse;
+    }
+    main{
+        flex-basis: 60%;
+        margin-right: 10px;
+        margin-top: 0;
+    }
+    aside{
+        flex-grow: 1;
     }
 }
